--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^16.18.26",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
+    "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "request-ip": "^3.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
