--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.26",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
