--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -24,7 +25,6 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://api.withfestival.site",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -37,6 +37,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://api.withfestival.site:8080",
   "browserslist": {
     "production": [
       ">0.2%",
