로컬 환경에서 API 연동 및 업로드 성공 (#54)

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://api.withfestival.site:8080",
+  "proxy": "https://api.withfestival.site",
   "browserslist": {
     "production": [
       ">0.2%",
