--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "https://api.withfestival.site",
+  "proxy": "http://localhost:8080/",
   "browserslist": {
     "production": [
       ">0.2%",
