--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "request-ip": "^3.3.0",
+    "sass": "^1.68.0",
+    "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
