--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8080/",
+  "proxy": "https://server.withfestival.site/",
   "browserslist": {
     "production": [
       ">0.2%",
