feat : Vercel 프록시 설정 (#70)

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://withfestival.site/:path*"
+      "destination": "https://server.withfestival.site/:path*"
     },
     {
       "source": "/api/:path*/",
-      "destination": "https://withfestival.site/:path*/"
+      "destination": "https://server.withfestival.site/:path*/"
     }
   ]
 }
