--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
