--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
