--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/css": "^11.10.8",
     "@emotion/react": "^11.10.8",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +22,6 @@
     "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
